--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -12,9 +12,71 @@
 </head>
 <body>
 	<div class="flex-container">
-		<div class="dp-container"><img src="assets/dp.jpg" class="dp"></div>
+		<div class="dp-container"><img src="assets/dp.jpg" class="dp" alt="Aman Verma"></div>
 		<div><h1 class="text">Aman Verma</h1></div>
 		<div><h2 class="text">CSE @ IIT Delhi '24</h2></div>
+		<!--<div class="contact">
+				<div class = "github">
+		            <a href="https://github.com/aman-v1729">
+		            	<div class="icon-container">
+							<i class="fab fa-github icon" style="color: #211f1f"></i>
+		            	</div>
+		            </a>
+		        </div>
+		        <div class = "fb">
+		            <a href="https://www.facebook.com/aman">
+		            	<div class="icon-container">
+		            		<i class="fab fa-facebook-f icon" style="color: #3b5998"></i>
+		            	</div>
+		            </a>
+		        </div>
+		        <div class = "linkedin">
+		            <a href="https://www.linkedin.com/in/aman/">
+		            	<div class="icon-container">
+		            	<i class="fab fa-linkedin-in icon" style="color: #0076a8"></i>
+		            	</div>
+		            </a>
+		        </div>
+		        <div class = "discord">
+		            <a href="discord">
+		            	<
+		            	<i class="fab fa-discord icon" style="color: #7289d9"></i>
+		            </a>
+		        </div>
+		        <div class = "mail">
+		            <a href="mailto:Aman.Verma.cs519@cse.iitd.ac.in">
+		            	<i class="fas fa-envelope icon"></i>
+		            </a>
+		        </div>
+		</div>-->
+		<div class="contact">
+	    <ul>
+	    	<li class = "github">
+	            <a href="github">
+	            	<i class="fab fa-github icon" style="color: #211f1f"></i>
+	            </a>
+	        </li>
+	        <li class = "fb">
+	            <a href="https://www.facebook.com/aman">
+	            	<i class="fab fa-facebook-f icon" style="color: #3b5998"></i>
+	            </a>
+	        </li>
+	        <li class = "linkedin">
+	            <a href="https://www.linkedin.com/in/aman/">
+	            	<i class="fab fa-linkedin-in icon" style="color: #0076a8"></i>
+	            </a>
+	        </li>
+	        <li class = "discord">
+	            <a href="discord">
+	            	<i class="fab fa-discord icon" style="color: #7289d9"></i>
+	            </a>
+	        </li>
+	        <li class = "mail">
+	            <a href="mailto:Aman.Verma.cs519@cse.iitd.ac.in">
+	            	<i class="fas fa-envelope icon"></i>
+	            </a>
+	        </li>
+	    </ul>
 	</div>
 </body>
 </html>
