--- a/index.html
+++ b/index.html
@@ -13,67 +13,33 @@
 <body>
 	<div class="flex-container">
 		<div class="dp-container"><img src="assets/dp.jpg" class="dp" alt="Aman Verma"></div>
-		<div><h1 class="text">Aman Verma</h1></div>
-		<div><h2 class="text">CSE @ IIT Delhi '24</h2></div>
-		<!--<div class="contact">
-				<div class = "github">
-		            <a href="https://github.com/aman-v1729">
-		            	<div class="icon-container">
-							<i class="fab fa-github icon" style="color: #211f1f"></i>
-		            	</div>
-		            </a>
-		        </div>
-		        <div class = "fb">
-		            <a href="https://www.facebook.com/aman">
-		            	<div class="icon-container">
-		            		<i class="fab fa-facebook-f icon" style="color: #3b5998"></i>
-		            	</div>
-		            </a>
-		        </div>
-		        <div class = "linkedin">
-		            <a href="https://www.linkedin.com/in/aman/">
-		            	<div class="icon-container">
-		            	<i class="fab fa-linkedin-in icon" style="color: #0076a8"></i>
-		            	</div>
-		            </a>
-		        </div>
-		        <div class = "discord">
-		            <a href="discord">
-		            	<
-		            	<i class="fab fa-discord icon" style="color: #7289d9"></i>
-		            </a>
-		        </div>
-		        <div class = "mail">
-		            <a href="mailto:Aman.Verma.cs519@cse.iitd.ac.in">
-		            	<i class="fas fa-envelope icon"></i>
-		            </a>
-		        </div>
-		</div>-->
+		<div><h1 class="desc">Aman Verma</h1></div>
+		<div><h2 class="desc"><a href="https://home.iitd.ac.in/">CSE @ IIT Delhi '24</a></h2></div>
 		<div class="contact">
 	    <ul>
 	    	<li class = "github">
-	            <a href="github">
-	            	<i class="fab fa-github icon" style="color: #211f1f"></i>
+	            <a href="https://github.com/aman-v1729">
+	            	<div class="icon-container"><i class="fab fa-github icon" style="color: #211f1f"></i></div>
 	            </a>
 	        </li>
 	        <li class = "fb">
-	            <a href="https://www.facebook.com/aman">
-	            	<i class="fab fa-facebook-f icon" style="color: #3b5998"></i>
+	            <a href="https://www.facebook.com/AmanV1729">
+	            	<div class="icon-container"><i class="fab fa-facebook-f icon" style="color: #3b5998"></i></div>
 	            </a>
 	        </li>
 	        <li class = "linkedin">
-	            <a href="https://www.linkedin.com/in/aman/">
-	            	<i class="fab fa-linkedin-in icon" style="color: #0076a8"></i>
+	            <a href="https://www.linkedin.com/in/aman-v1729/">
+	            	<div class="icon-container"><i class="fab fa-linkedin-in icon" style="color: #0076a8"></i></div>
 	            </a>
 	        </li>
-	        <li class = "discord">
+	        <!--<li class = "discord">
 	            <a href="discord">
 	            	<i class="fab fa-discord icon" style="color: #7289d9"></i>
 	            </a>
-	        </li>
+	        </li>-->
 	        <li class = "mail">
 	            <a href="mailto:Aman.Verma.cs519@cse.iitd.ac.in">
-	            	<i class="fas fa-envelope icon"></i>
+	            	<div class="icon-container"><i class="fas fa-envelope icon"></i></div>
 	            </a>
 	        </li>
 	    </ul>
