Added particle.js scripts

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Aman Verma</title>
+
 </head>
 <body>
+
+	<div id="particles-js">	</div>
 	<div class="flex-container">
 		<div class="dp-container"><img src="assets/dp.jpg" class="dp" alt="Aman Verma"></div>
 		<div><h1 class="desc">Aman Verma</h1></div>
@@ -32,17 +35,18 @@
 	            	<div class="icon-container"><i class="fab fa-linkedin-in icon" style="color: #0076a8"></i></div>
 	            </a>
 	        </li>
-	        <!--<li class = "discord">
-	            <a href="discord">
-	            	<i class="fab fa-discord icon" style="color: #7289d9"></i>
-	            </a>
-	        </li>-->
 	        <li class = "mail">
 	            <a href="mailto:Aman.Verma.cs519@cse.iitd.ac.in">
 	            	<div class="icon-container"><i class="fas fa-envelope icon"></i></div>
 	            </a>
 	        </li>
 	    </ul>
+	    </div>
 	</div>
+	<script type="text/javascript">
+
+	</script>
+	<script type="text/javascript" src="particles.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
