--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<div id="particles-js">	</div>
 	<div class="flex-container">
-		<div class="dp-container"><img src="assets/dp.jpg" class="dp" alt="Aman Verma"></div>
+		<div class="dp-container"><img src="https://scontent.fdel1-3.fna.fbcdn.net/v/t1.0-9/65460355_906800859684836_498268265634594816_n.jpg?_nc_cat=103&_nc_sid=09cbfe&_nc_ohc=e7KBsuBGYnEAX_dG5Kv&_nc_ht=scontent.fdel1-3.fna&oh=23473b1d857013d7abafaa1e07b030bc&oe=5F53BEEF" class="dp" alt="Aman Verma"></div>
 		<div><h1 class="desc">Aman Verma</h1></div>
 		<div><h2 class="desc"><a href="https://home.iitd.ac.in/">CSE @ IIT Delhi '24</a></h2></div>
 		<div class="contact">
