File structure update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<script type="text/javascript">
 
 	</script>
-	<script type="text/javascript" src="particles.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="js/particles.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
